Tidy up, remove Math.clamp as doesn't seem to be well supported